# GRO-DFTB

./: .gitignore  .gitmodules  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: FindDFTBPlus.cmake  FindGROMACS.cmake
examples/b5_tutorial/: README.md  analysis.sh  expected_results.md
include/grodftb/: damping.h  driver.h  error.h  linkatom.h  switching.h  units.h
patches/: README.md  gromacs-dftb.patch
src/driver/: dftb_driver.c  version.c.in
src/embedding/: damping.c  switching.c
src/linkatom/: linkatom.c
src/units/: units.c
tests/: smoke_dftbp_api.c  test_b5_fd_forces.c  test_b5_nve.c  test_b5_preprocessing.c  test_b5_single_step.c  test_b6_integration.c  test_b6_memory.c  test_b6_nve.c  test_benchmark_data.sh  test_charge_redistrib.c  test_checkpoint.c  test_ci.sh  test_cmake.sh  test_consistency_check.c  test_cutoff_embedding.c  test_damping.c  test_damping_fd.c  test_damping_integration.c  test_dftb3_energy.c  test_dftbplus_build.sh  test_driver.c  test_embedding_fd.c  test_embedding_stability.c  test_forces.c  test_gromacs_build.sh  test_linkatom.c  test_linkatom_fd.c  test_linkatom_fd_b6.c  test_nve_drift.c  test_nve_drift_damped.c  test_nve_stability.c  test_pme_erfc_kernel.c  test_pme_potential_units.c  test_qm_stability.c  test_repo_structure.sh  test_switching.c  test_switching_fd.c  test_switching_regression.c  test_temperature.c  test_trajectory_validity.c  (+2 more)
tests/data/b1/: dftb_in.hsd  geo.gen  provenance.txt  reference.json
tests/data/b1_dftb3/: PROVENANCE.md  api_dftb_in.hsd  dftb_in.hsd
tests/data/b2/: dftb_in.hsd  geo.gen  provenance.txt  reference.json
tests/data/b4/: dftb_in.hsd  provenance.txt  reference.json
tests/data/b4_damped/: geo.gen  provenance.json  standalone.hsd
tests/data/b4_damped/reference/: autotest.tag  dftb_in.hsd  provenance.md
tests/data/b5/: README.md  b5_nve.gro  dftb_in.hsd  mdout.mdp  nve_10ps.mdp  nve_500ps.mdp  nve_qmmm.mdp  provenance.json  qm_water_isolated.gen
tests/data/b5/nve_damped/: b5_nve_damped.gro  mdout.mdp
tests/data/b5/preparation/: em.gro  em.mdp  mdout.mdp  nvt.gro  nvt.mdp  qm_water_info.txt  temperature.xvg
tests/data/b5_energy_decomposition/: decomposition_stats.json  provenance.json
tests/data/b5_pbc_regression/: analysis_results.json  dftb_in.hsd  minim.mdp  nve_pme.mdp  nvt_equil.mdp  provenance.json  qm_water.gro
tests/data/b5_pbc_regression/b5_2p5nm/: box.gro  em.gro  energy.xvg  index.ndx  mdout.mdp  nve_pme.gro  nvt.gro  qm_energy.xvg  solvated.gro  topol.top  total_energy.xvg
tests/data/b5_pbc_regression/b5_3p0nm/: energy.xvg  index.ndx  initial.gro  mdout.mdp  nve_pme.gro  qm_energy.xvg  qm_water_isolated.gen  total_energy.xvg
tests/data/b5_pbc_regression/b5_4p0nm/: box.gro  em.gro  energy.xvg  index.ndx  mdout.mdp  nve_pme.gro  nvt.gro  qm_energy.xvg  solvated.gro  topol.top  total_energy.xvg
tests/data/b5_pbc_regression_100ps/: analysis_results.json  provenance.json
tests/data/b5_pme_drift/: analysis_results.json  initial.gro  nve_pme_long.mdp  provenance.json  qm_energy.xvg  slako  temperature.xvg  topol.top  total_energy.xvg
tests/data/b5_restart/: provenance.json
tests/data/b5_restart/cutoff/: results.json
tests/data/b5_restart/pme/: results.json
tests/data/b5_sigma_sweep/: analysis_results.json  provenance.json
tests/data/b6/: .gitignore  dftb_in.hsd  geometry.xyz  linkatom_def.json  provenance.json
tests/data/b6/work/: b6_opt.hsd  b6_sp.hsd  dftb_in_v2.hsd  geom.out.gen  geom.out.xyz  test_methylamine.hsd  test_water.hsd
tests/data/b6_solvated/: b6_solvated.top  b6_solvated_nvt.gro  dftb_in.hsd  drift_analysis.json  index_full.ndx  nve_100ps.mdp  provenance.json
tests/data/ethane_boundary/: charges.txt  geometry.xyz  provenance.json  qm_dftb_in.hsd  qm_geometry.xyz
tests/data/pme_reference/: ewald_b4_periodic.json  ewald_b4_periodic.py  ewald_single_charge.json  ewald_single_charge.py  provenance.json
tests/restart/: README.md  compare_energies.py  run_restart_cutoff.sh  run_restart_pme.sh
tools/: analyze_a2_statistical.py  analyze_b6_multiseed.py  analyze_energy_decomposition.py  analyze_nstlist_sweep.py  analyze_pbc_regression.py  analyze_pme_drift.py  analyze_sigma_sweep.py  build_dftbplus.sh  build_gromacs.sh  ci.sh  compute_delta_pbc.py  generate_reference_data.sh  install-hooks.sh  parse_charges_bin.py  sync_public.sh
